export const snapshot = {};

snapshot[`render remote files 1`] = `5`;

snapshot[`render remote files 2`] = `
{
  formats: [
    {
      engines: 1,
      ext: ".tmpl.ts",
      pageLoader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".tmpl.js",
      pageLoader: [AsyncFunction: module],
    },
    {
      engines: undefined,
      ext: ".tmpl.json",
      pageLoader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: undefined,
      ext: ".json",
    },
    {
      engines: 1,
      ext: ".md",
      pageLoader: [AsyncFunction: text],
    },
    {
      asset: true,
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".js",
      pageLoader: [AsyncFunction: text],
    },
    {
      asset: true,
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".ts",
      pageLoader: [AsyncFunction: text],
    },
    {
      componentLoader: [AsyncFunction: text],
      engines: 1,
      ext: ".njk",
      includesPath: "_includes",
      pageLoader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: undefined,
      ext: ".yaml",
      pageLoader: [AsyncFunction: yaml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: undefined,
      ext: ".yml",
      pageLoader: [AsyncFunction: yaml],
    },
    {
      asset: true,
      engines: undefined,
      ext: ".css",
      includesPath: "_includes",
      pageLoader: [AsyncFunction: text],
    },
  ],
}
`;

snapshot[`render remote files 3`] = `
[
  {
    dest: "/asset.txt",
    remote: "assets/remote_files/_remotes/asset.txt",
    src: "/asset.txt",
  },
]
`;

snapshot[`render remote files 4`] = `
{
  content: "<h1>Remote layout</h1>
<h2>Remote title</h2>

&lt;p&gt;Hello world&lt;/p&gt;


This is a local template

This is a remote template
",
  data: {
    content: "Hello world
",
    date: 1970-01-01T00:00:00.000Z,
    layout: "remote1.njk",
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    title: "Remote title",
    url: "/local1/",
  },
  dest: {
    ext: ".html",
    path: "/local1/index",
  },
  src: {
    ext: ".md",
    path: "/local1",
    remote: undefined,
  },
}
`;

snapshot[`render remote files 5`] = `
{
  content: "/* Other remote style */
body {
  color: yellow;
}
",
  data: {
    content: "/* Other remote style */
body {
  color: yellow;
}
",
    date: undefined,
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    sourceMap: {
      file: "other-remote-style.css",
      mappings: "AAAA,uBAAuB;AACvB;EACE,aAAa;AACf",
      names: [
      ],
      sources: [
        "other-remote-style.css",
      ],
      sourcesContent: [
        "/* Other remote style */
body {
  color: yellow;
}
",
      ],
      version: 3,
    },
    tags: [
    ],
    title: "Remote title",
    url: "/other-remote-style.css",
  },
  dest: {
    ext: ".css",
    path: "/other-remote-style",
  },
  src: {
    ext: ".css",
    path: "/other-remote-style",
    remote: "assets/remote_files/_remotes/other-remote-style.css",
  },
}
`;

snapshot[`render remote files 6`] = `
{
  content: 'var r=Object.defineProperty;var e=(t,m)=>r(t,"name",{value:m,configurable:!0});var l="Name";function o(){console.log("hello",l)}e(o,"default");o();
',
  data: {
    content: 'import hello from "./_includes/hello.js";

hello();
',
    date: 1970-01-01T00:00:00.000Z,
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    sourceMap: {
      file: undefined,
      mappings: "+EAAA,IAAOA,EAAQ,OCEA,SAARC,GAAoB,CACzB,QAAQ,IAAI,QAASC,CAAI,CAC3B,CAFOC,EAAAF,EAAA,WCAPG,EAAM",
      names: [
        "name_default",
        "hello_default",
        "name_default",
        "__name",
        "hello_default",
      ],
      sources: [
        "name.js",
        "hello.js",
        "scripts.js",
      ],
      sourcesContent: [
        'export default "Name";
',
        'import name from "./name.js";

export default function () {
  console.log("hello", name);
}
',
        'import hello from "./_includes/hello.js";

hello();
',
      ],
      version: 3,
    },
    tags: [
    ],
    title: "Remote title",
    url: "/scripts.js",
  },
  dest: {
    ext: ".js",
    path: "/scripts",
  },
  src: {
    ext: ".js",
    path: "/scripts",
    remote: undefined,
  },
}
`;

snapshot[`render remote files 7`] = `
{
  content: "/* Remote style */
body {
  color: red;
}
/* Other remote style */
body {
  color: yellow;
}
",
  data: {
    content: '@import "remote-style.css";
@import "./other-remote-style.css";
',
    date: 1970-01-01T00:00:00.000Z,
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    sourceMap: {
      file: "styles1.css",
      mappings: "AAAA,iBAAiB;AACjB;EACE,UAAU;AACZ;ACHA,uBAAuB;AACvB;EACE,aAAa;AACf",
      names: [
      ],
      sources: [
        "remote-style.css",
        "other-remote-style.css",
      ],
      sourcesContent: [
        "/* Remote style */
body {
  color: red;
}",
        "/* Other remote style */
body {
  color: yellow;
}
",
      ],
      version: 3,
    },
    tags: [
    ],
    title: "Remote title",
    url: "/styles1.css",
  },
  dest: {
    ext: ".css",
    path: "/styles1",
  },
  src: {
    ext: ".css",
    path: "/styles1",
    remote: undefined,
  },
}
`;

snapshot[`render remote files 8`] = `
{
  content: "body {
  color: blue;
}",
  data: {
    content: "body {
  color: blue;
}",
    date: undefined,
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    sourceMap: {
      file: "styles2.css",
      mappings: "AAAA;EACE,WAAW;AACb",
      names: [
      ],
      sources: [
        "styles2.css",
      ],
      sourcesContent: [
        "body {
  color: blue;
}",
      ],
      version: 3,
    },
    tags: [
    ],
    title: "Remote title",
    url: "/styles2.css",
  },
  dest: {
    ext: ".css",
    path: "/styles2",
  },
  src: {
    ext: ".css",
    path: "/styles2",
    remote: "assets/remote_files/_remotes/styles2.css",
  },
}
`;
